# Awas-Jentik

./: .gitignore  DESIGN.md  README.md  railway.json  vercel.json
AI_Engine/: .dockerignore  .gitignore  BE-Integration.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
AI_Engine/config/: config.yaml
AI_Engine/models/: compatibility_manifest.json  hrs_preprocessor.joblib  hrs_tabpfn_fitted.tabpfn_fit  hrs_winner_model.joblib  model_metadata.json  shap_background.parquet
AI_Engine/scripts/: __init__.py  prefetch_tabpfn_checkpoint.py  verify_model_bundle.py
AI_Engine/src/: __init__.py  settings.py
AI_Engine/src/api/: __init__.py  main.py  schemas.py
AI_Engine/src/data/: __init__.py  generate.py  split.py  validation.py
AI_Engine/src/features/: __init__.py  preprocess.py  schema.py  scoring.py
AI_Engine/src/models/: __init__.py  baseline.py  serialization.py  tabpfn.py  train.py  xgboost_candidate.py
AI_Engine/src/repositories/: __init__.py  audit.py  cases.py  grid.py  rainfall.py
AI_Engine/src/services/: __init__.py  explain.py  model.py  risk.py
AI_Engine/tests/: __init__.py  test_api.py  test_data_pipeline.py  test_risk_assessment_behavior.py  test_scoring.py
BE/: .env  .env.example  Dockerfile  init.sql  migrate_to_supabase_auth.sql  predict_service_v2.py  requirements.txt  schema.sql  seed.py  seed.sql  seed_demo_dataset.sql  supabase_reset.sql  supabase_setup.sql  test_db.py  test_db_conn.py  train_model_v2.py
BE/app/: __init__.py  (+3 more)
FE/: .env.example  package-lock.json  package.json
awasjentik/: package.json
docs/: PRD.md
(+58 files in other folders)
